AngularApp/projects/app-service-diagnostics/src/styles/global.scss
body{
    font-family: "Segoe UI", "Segoe", Tahoma, Helvetica, Arial, sans-serif;
}

.width-80{
    width: 80%;
}

.width-90{
    width: 90%;
}

.width-100{
    width: 100%;
}

.app-container {
    border:none !important;
    box-shadow:none !important;
    position:fixed !important;
    width:100% !important;
    top:0 !important;
    height:100% !important;
}

.app-nav-bar {
    box-shadow: 0px 0 5px 0px #e1e1e1;
}

.app-nav-tab {
    margin-top: 5px !important;
}

.app-nav-tab:hover {
    cursor: hand !important;
}

.app-nav-tab.active {
    margin-top: 2px !important;
}

.app-nav-tab > a {
    cursor: pointer !important;
    border: 1px solid #e1e1e1 !important;
    border-radius: 5px !important;
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
    margin-left:10px !important;
}

.app-nav-tab.active > a{
    border-bottom: 3px solid #252525 !important;
}

.modal-backdrop {
    z-index: -1;
}

#app-content{
    padding:0 !important;
    position:relative !important;
    overflow-y:auto !important;
}

#app-content::-webkit-scrollbar-track {
    background-color: rgba(226, 226, 226, 0.28);
	  border-radius: 5px;
}

#app-content::-webkit-scrollbar {
	width: 5px;
	background-color: transparent;
}

#app-content::-webkit-scrollbar-thumb {
	border-radius: 5px;
	background-color:rgba(172, 172, 172, 1);
}

.home-page-container {
  margin-right:-10px !important;
}

.bot-container {
  width:79%;
  display:inline-block;
  padding-right:0;
}

#tools-content {
  width:20%;
  display:inline-block;
  padding-right:5px;
  position:relative !important;
  overflow-y:auto !important;
}

#tools-content::-webkit-scrollbar-track {
  background-color: rgba(226, 226, 226, 0.28);
  border-radius: 5px;
}

#tools-content::-webkit-scrollbar {
  width: 5px;
  background-color: transparent;
}

#tools-content::-webkit-scrollbar-thumb {
	border-radius: 5px;
	background-color:rgba(172, 172, 172, 0.28);
}

@media screen and (max-width: 800px) {
    #tools-content {
        display: none;
    }

    .bot-container {
        width: 100%;
    }
}

.nvd3 text {
    font-size: 12px !important;
    font-weight: 400 !important;
    font-family: inherit !important;
}

.nvd3 .nv-axislabel {
    font-weight: 600 !important;
    font-size: 13px !important;
}

.row {
    margin-left:-5px;
    margin-right:-5px;
}

.inline {
    display: inline;
}

.section-header {
    font-weight: 600;
    margin-bottom: 15px !important;
}

.sub-text {
    color:rgb(84,84,84);
}

.pull-left {
    float:left !important;
}

.pull-right {
    float:right !important;
}

.divider {
    height: 1px;
    width:100%;
    background-color: rgba(0,0,0, 0.15);
    margin-top:15px;
}

.hotspot-clickable {
    padding:5px;
    font-size: 12px;
    color:#87bfff;
    line-height: 18px;
    cursor: pointer;
}

.hotspot-clickable:hover {
    background-color: #EBF4FF;
    text-decoration: none;
}

.spin-icon {
    color:rgba(0,0,0,0.2);
    margin-right:5px;
}

.refresh-icon {
    font-size:15px;
    margin-right:5px;
}

.health-icon {
    font-size: 18px;
    margin-right:5px;
}

.healthy-icon-color {
    color: rgb(127, 186, 0);
}

.unhealthy-icon-color {
    color: rgb(232, 17, 35);
}

.warning-icon-color {
    color: rgb(255, 128, 0);
}

.focus-box {
    padding:10px 0px 10px 15px;
    border: 1px solid rgb(219, 219, 219);
    border-left: 10px solid rgb(100, 100, 100);
}

.focus-box-warning {
    border: 1px solid rgb(251, 201, 151);
    border-left: 10px solid rgb(255, 128, 0);
}

.focus-box-info {
    border: 1px solid #c4dff7;
    border-left: 10px solid #337ab7;
}

.focus-box-healthy {
    border-left: 10px solid rgb(127, 186, 0);
}

.focus-box-nobackground {
    background-color: transparent;
}

h3.not-bold, h4.not-bold, h5.not-bold {
    font-weight: 400;
}

a:hover {
  cursor: pointer;
}

.corner-menu-item {
    float:left;
    height: inherit;
}

.corner-menu-title {
    background-color: #d2d2d2;
    color: #313131;
    /*font-weight:600;*/
}

.corner-menu-text {
    padding: 3px 5px 3px 5px;
}

.corner-menu {
    position: absolute;
    left: 0px;
    top: 0px;
    height: 25px;
    font-size: 14px;
    border-radius: 4px 0px 0px 0px;
}

.graph-panel-body {
    padding-top:20px;
    padding-bottom: 0px;
}

.loading-message {
  margin: 10px;
  color: black;
  font-size: 20px;
  font-weight: lighter;
}

.download-report {
    font-size:10px;
}

.download-report:hover {
    cursor: pointer;
    text-decoration: underline;
}

.panel .with-nav-tabs .panel-heading .app-nav-bar {
    padding: 5px 5px 0 5px;
}

.panel .with-nav-tabs .nav-tabs {
	border-bottom: none;
}

.panel .with-nav-tabs .nav-justified {
	margin-bottom: -1px;
}

.nav > li > a {
    padding: 5px 15px;
}

/*** PANEL DEFAULT ***/
.with-nav-tabs.panel-default .nav-tabs > li > a {
    background-color: #eeeeee;
}

.with-nav-tabs.panel-default .nav-tabs > li > a,
.with-nav-tabs.panel-default .nav-tabs > li > a:hover,
.with-nav-tabs.panel-default .nav-tabs > li > a:focus {
    color: rgb(49, 49, 49);
}

.with-nav-tabs.panel-default .nav-tabs > .open > a,
.with-nav-tabs.panel-default .nav-tabs > .open > a:hover,
.with-nav-tabs.panel-default .nav-tabs > .open > a:focus,
.with-nav-tabs.panel-default .nav-tabs > li > a:hover,
.with-nav-tabs.panel-default .nav-tabs > li > a:focus {
    color: rgb(37, 37, 37);
    background-color: rgb(233, 233, 233);
  	border-color: transparent;
}

.with-nav-tabs.panel-default .nav-tabs > li.active > a,
.with-nav-tabs.panel-default .nav-tabs > li.active > a:hover,
.with-nav-tabs.panel-default .nav-tabs > li.active > a:focus {
    color: rgb(26, 26, 26);
    background-color: #fff;
    border-color: #ddd;
    border-bottom-color: transparent;
}

.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu {
    background-color: #f5f5f5;
    border-color: #ddd;
}

.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a {
    color: #777;
}
/* ... */

